# pdf_manager

./: .gitignore  CHANGELOG.md  README.md  build.ps1  demo_security.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build.yml
docs/: combinar-pdf.md  ejecucion_aplicacion_dev.md  extraer-pdf.md  seguridad-pdf.md  visor-pdf.md
installer/: setup.iss
src/: app.py  app_api.py  app_config.py  document_manager_ui.py  home.py  main.py  settings_tab.py
src/agent/: __init__.py  agente.py  pdf_agent.py
src/app_v1_modulos_py/: document_manager_ui.py  home.py  main.py  recent_files.py  settings_tab.py
src/app_v1_modulos_py/agent/: config.py  extractor.py
src/app_v1_modulos_py/pdf_extractor/: __init__.py  tab.py
src/app_v1_modulos_py/pdf_merge/: __init__.py  tab.py
src/app_v1_modulos_py/pdf_viewer/: _gesture_mixin.py  _redact_agent_mixin.py  _render_mixin.py  _text_sel_mixin.py  renderer.py  viewer.py
src/app_v1_modulos_py/pdf_viewer/ocr/: __init__.py  processor.py
src/pdf_extractor/: tab.py
src/pdf_merge/: tab.py
src/pdf_security/: README.md  __init__.py  security.py  tab.py
src/pdf_viewer/: __init__.py  _annot_mixin.py  _censorship_profiles.py  _gesture_mixin.py  _ocr_mixin.py  _redact_agent_mixin.py  _render_mixin.py  _text_sel_mixin.py  _viewer_defs.py  annotations.py  renderer.py  viewer.py
src/pdf_viewer/ocr/: processor.py
src/visor_pdf/: package-lock.json  package.json  vite.config.ts
src/visor_pdf/src/: App.css  App.tsx  main.tsx
visor_pdf/: index.html  package-lock.json  package.json
(+12 files in other folders)
