[project]
name = "extraer-pdfs"
version = "0.1.1"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Malcom Navarro", email = "you@example.com" }
]
dependencies = [
  "flet[all]==0.28.3",
  "langchain>=0.3.28",
  "langchain-community>=0.3.31",
  "langchain-google-genai>=2.1.12",
  "langchain-openai>=0.3.35",
  "onnxruntime>=1.20.1",
  "onnxtr[cpu,cpu-headless]>=0.5.1",
  "pydantic>=2.12.5",
  "pymupdf>=1.26.5",
  "pymupdf4llm>=0.0.27",
  "python-dotenv>=1.2.1",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "extraer-pdfs"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
